--- a/Backend-Smart-Vehicle-App/.gitignore
+++ b/Backend-Smart-Vehicle-App/.gitignore
@@ -62,3 +62,6 @@ typings/
 
 # Cache used by TypeScript's incremental build
 *.tsbuildinfo
+
+# Archivo de cadena de conexion a base de Datos
+claveDB.ts
