--- a/Backend-Smart-Vehicle-App/package.json
+++ b/Backend-Smart-Vehicle-App/package.json
@@ -57,6 +57,7 @@
     "@loopback/rest-explorer": "^3.3.4",
     "@loopback/security": "^0.5.4",
     "@loopback/service-proxy": "^3.2.4",
+    "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "loopback-connector-mongodb": "^5.6.0",
