Se realiza la vista del login del cliente y se empieza a desarrollar el modulo de gestion de solicitudes del cliente, se realiza conexion con el backend y se añaden estilos css con bootstrap y media queries

--- a/Smart-Vehicle-App/client/angular.json
+++ b/Smart-Vehicle-App/client/angular.json
@@ -33,7 +33,7 @@
               "node_modules/font-awesome/css/font-awesome.min.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
               "src/assets/js/init-materialize.js"
             ]
           },
