--- a/Smart-Vehicle-App/client/package.json
+++ b/Smart-Vehicle-App/client/package.json
@@ -20,9 +20,11 @@
     "@angular/router": "~13.0.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/crypto-js": "^4.0.2",
+    "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-captcha": "^10.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
