--- a/Smart-Vehicle-App/client/angular.json
+++ b/Smart-Vehicle-App/client/angular.json
@@ -30,7 +30,8 @@
               "src/styles.css",
               "src/assets/css/global-styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
