--- a/Smart-Vehicle-App/client/package.json
+++ b/Smart-Vehicle-App/client/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/crypto-js": "^4.0.2",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
     "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
     "materialize-css": "^1.0.0-rc.2",
