--- a/Smart-Vehicle-App/client/package.json
+++ b/Smart-Vehicle-App/client/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "materialize-css": "^1.0.0-rc.2",
     "ngx-captcha": "^10.0.0",
+    "node-fetch": "^2.6.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
