--- a/Smart-Vehicle-App/client/package.json
+++ b/Smart-Vehicle-App/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@types/crypto-js": "^4.0.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
@@ -35,6 +36,7 @@
     "@angular-devkit/build-angular": "^13.0.3",
     "@angular/cli": "^13.0.3",
     "@angular/compiler-cli": "~13.0.2",
+    "@angular/localize": "^13.0.2",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
