--- a/Smart-Vehicle-App/package.json
+++ b/Smart-Vehicle-App/package.json
@@ -68,11 +68,12 @@
   },
   "devDependencies": {
     "@loopback/build": "^7.0.2",
-    "source-map-support": "^0.5.20",
-    "@loopback/testlab": "^3.4.4",
-    "@types/node": "^10.17.60",
     "@loopback/eslint-config": "^11.0.2",
+    "@loopback/testlab": "^3.4.4",
+    "@types/crypto-js": "^4.0.2",
+    "@types/node": "^10.17.60",
     "eslint": "^7.32.0",
+    "source-map-support": "^0.5.20",
     "typescript": "~4.4.4"
   }
 }
